--- a/site/index.html
+++ b/site/index.html
@@ -208,12 +208,12 @@
       Tramite il selettore è possibile esplorare rispettivamente:
       <ul>
         <li>L'andamento trimestrale nel dataset proveniente dai commenti su Reddit (relativo al periodo marzo 2023 - maggio 2023)</li>
-        <li>L'andamento del sentimento nel dataset di tweets in lingua inglese (relativo al periodo settembre 2022 - giugno 2022)</li>
+        <li>L'andamento del sentimento nel dataset di tweets in lingua inglese (relativo al periodo settembre 2022 - giugno 2022</li>
         <li>L'andamento del sentimento nel dataset di tweets in lingua italiana (relativo al periodo settembre 2022 - giugno 2023)</li>
       </ul>
     </p>
     <p>Dall'osservazione dell'andamento delle curve possiamo notare come il sentimento verso ChatGPT sia complessivamente positivo, con l'eccezione del grafico per il dataset italiano che incorpora numerose etichette con valore neutro.</p>
-    <p>Il grafico costruito sui post di Reddit presenta un picco nella fase di aprile 2023, mentre quello per Twitter.com nel periodo gennaio/febbraio 2023, seguito da un'assottigliamento della curva procedendo verso la fase maggio/giugno 2023.</p>
+    <p>Il grafico costruito sui post di Reddit presenta un picco nella fase di aprile 2023, mentre quello per Twitter.com presenta il proprio nel periodo di gennaio/febbraio 2023, seguito da un'assottigliamento della curva procedendo verso la fase maggio/giugno 2023.</p>
     <div>
 
     </div>
@@ -271,7 +271,7 @@
         <b><i>Just for fun, we asked ChatGPT to write a haiku for us on fake news. And, <a href="https://t.co/ecglrw7ub" target="_blank">it delivered</a></i>
       </b>
       <p>
-        Purtroppo il tweet non è più disponibile e non è stato possibile leggere l'<i>haiku</i>, componimento poetico nato in Giappone nel XVII secolo.
+        Purtroppo il tweet non è più disponibile e non è stato possibile leggere l'<i>haiku</i>, componimento poetico nato in Giappone nel XVII secolo).
       </p>
       <p>
         <b><i>We asked chat GPT to write a sex toy joke and this is what it wrote: Why was the vibrator feeling cold? Because it left its batteries in the refrigerator!</i></b>
@@ -342,12 +342,12 @@
         <h2 id="sez10">Argomenti più discussi</h2>
         <p>
           Il grafico seguente è un confronto tra topics nei dataset di <strong>Twitter</strong> e <strong>Reddit</strong>, calcolati con l'utilizzo di NLTK Vader e TextBLob.
-          Interessante osservare come NLTK Vader registri una sostanziale differenza di sentimento sui <i>topics</i> della <i>privacy</i> e del <i>ban</i> tra i due social network, con una netta oscillazione tra valori positivi e negativi. 
+          Interessante osservare come NLTK Vader registri una sostanziale differenza di sentimento sul topic della <i>privacy</i> e del <i>ban</i> tra i due social network, con una netta oscillazione tra valori positivi e negativi. 
         </p>
         <div id="topic-container" class="chartContainer"></div>
       </div>
       <p>
-        Il confronto basato sui valori registrati da TextBlob mostra un minore distacco sugli argomenti discussi nel confronto tra i post di Twitter e Reddit.
+        Di minore rilievo il confronto basato sui valori registrati da TextBlob, dove si nota un minore distacco sui topics nel confronto tra i post di Twitter e Reddit.
       </p>
     </div>
   </div>
@@ -407,26 +407,26 @@
         <b class="green">Erotic</b>: alcuni utenti hanno interagito con ChatGPT per creare componimenti erotici di varia tipologia, dal racconto sci-fi alla poesia. È stato individuato in questo ambito un utilizzo ancora più particolare:
       </p>
       <p>
-        <b><i>• Writing erotic prompts for Chat GPT hoping to be the first person to make AI cum. It’s like the Turing Test</i></b>
+        <b><i>Writing erotic prompts for Chat GPT hoping to be the first person to make AI cum. It’s like the Turing Test</i></b>
       </p>
       <p>
         <b class="green">Sex</b>: per la lingua inglese gli argomenti trattati variano dalla riflessione sul sessismo alle notizie riguardo al "traffico sessuale" o allo <a href="https://time.com/6247678/openai-chatgpt-kenya-workers" target="_blank"> sfruttamento di manodopera in Kenya</a> per il <i>fine tuning</i> di ChatGPT.
       </p>
       <p>
       <p>
-        <b><i>• From #ChatGPT Gender identity is not the same as biological sex, which refers to the physical and physiological characteristics typically associated with being male or female, such as chromosomes, hormones, and reproductive organs.</i></b>
+        <b><i>From #ChatGPT Gender identity is not the same as biological sex, which refers to the physical and physiological characteristics typically associated with being male or female, such as chromosomes, hormones, and reproductive organs.</i></b>
       </p>
       <p>
-        <b><i>• Sexual tension between me and #ChatGPT is on fire</i></b>
+        <b><i>Sexual tension between me and #ChatGPT is on fire</i></b>
       <p>
       <p>
-        <b><i>• Just had sex with \#ChatGPT. <a href="https://t.co/v8uJY2MNdr" target="_blank">Shit felt human to me...</a> </i></b>
+        <b><i>Just had sex with \#ChatGPT. <a href="https://t.co/v8uJY2MNdr" target="_blank">Shit felt human to me...</a> </i></b>
       </p>
       <p>
-        <b><i>• Funny how chatgpt dont wan’t you to write a moviescript where a girl falsly report sexual assault #ChatGPT #beliveallwomen</i></b>
+        <b><i>Funny how chatgpt dont wan’t you to write a moviescript where a girl falsly report sexual assault #ChatGPT #beliveallwomen</i></b>
       </p>
       <p>
-        <b><i>• I see what all the fuss is about #chatgpt  'Write a song about <a href="https://t.co/o2ybFps9j8" target="_blank"> smashing the patriarchy in the style of the sex pistols</a></i></b>
+        <b><i>I see what all the fuss is about #chatgpt  'Write a song about <a href="https://t.co/o2ybFps9j8" target="_blank"> smashing the patriarchy in the style of the sex pistols</a></i></b>
       </p>
 
       <h3 class="green">Parole più frequenti su Twitter in Italiano</h3>
@@ -451,16 +451,16 @@
         sito della Polizia</a>. "La realtà dei casi rivela infatti che la maggioranza delle vittime non è più giovanissima e che, magari dopo una relazione sentimentale finita male e con figli che vivono autonomamente, si diventa facile preda chattando davanti al computer o su uno smartphone".
       </p>
       <p>
-        <b><i>• Temo che il successo è ancora significativo. Aggiungi #ChatGPT ed il gioco è fatto #RomanceScam #Sexstortion</i></b>
+        <b><i>Temo che il successo è ancora significativo. Aggiungi #ChatGPT ed il gioco è fatto #RomanceScam #Sexstortion</i></b>
       </p>
       <p>
         Altri 2 utenti invece hanno utilizzato la chat per attività sessuali:
       </p>
       <p>
-        <b><i>• Allora ChatGPT: Come convincere le donne a mandarti le foto dei piedi senza sembrare un maniaco sessuale</i></b>
+        <b><i>Allora ChatGPT: Come convincere le donne a mandarti le foto dei piedi senza sembrare un maniaco sessuale</i></b>
       </p>
       <p>
-        <b><i>• #ChatGPT ecco cosa succede se chiedi di <a href="https://t.co/2t8mdch6Ak" target="_blank">simulare una chat a sfondo sessuale </a> </i></b>
+        <b><i>#ChatGPT ecco cosa succede se chiedi di <a href="https://t.co/2t8mdch6Ak" target="_blank">simulare una chat a sfondo sessuale </a> </i></b>
       </p>
 
       <div class="graphics-btn-container">
@@ -471,7 +471,21 @@
       </div>
 
       <div id="graphics-container-trigrams" class="chartContainer"></div>
-
+      <div>
+        <p>
+          Il grafico mostra la distribuzione dei <i>trigrammi</i> più frequenti nell'arco dei mesi.
+          Per ogni social è possibile avere:
+          <ul>
+            <li>
+              una visione complessiva dei trigrammi più frequenti
+            </li>
+            <li>
+              una visione dettagliata relativa al mese selezionato
+            </li>
+          </ul>
+        </p>
+        <p>Il gradiente di colore indica la distribuzione del sentimento rispetto al <i>trigramma</i>, l'intensità di colore aumenta all'aumentare del valore di positività, diminuisce viceversa.</p>
+      </div>
     </div>
   </div>
 
