--- a/site/index.html
+++ b/site/index.html
@@ -196,12 +196,20 @@
 
       <h2 id="sez6">Sentiment analysis sui dataset in italiano e inglese</h2>
       <p>
-        Per Reddit è stata presa in considerazione solo la lingua inglese, mentre per Twitter sia l'italiano che l'inglese.
+      Il grafico in figura mostra l'andamento del <i>sentiment</i> verso l'argomento "ChatGPT" nell'arco dei mesi.
+      Per Reddit è stata presa in considerazione solo la lingua inglese, mentre per Twitter sia l'italiano che l'inglese.
       </p>
+      <p>
+      Tramite i pulsuanti è possibile esplorare rispettivamente:
+      <ul>
+        <li>L'andamento trimestrale nel dataset proveniente dai commenti su Reddit (relativo al periodo marzo 2023 - maggio 2023)</li>
+        <li>L'andamento del sentimento nel dataset di tweets in lingua inglese (relativo al periodo settembre 2022 - giugno 2022</li>
+        <li>L'andamento del sentimento nel dataset di tweets in lingua italiana (relativo al periodo settembre 2022 - giugno 2023)</li>
+      </ul>
+    </p>
 
 
       <div class="graphics-btn-container">
-        <h3 class="green">Sentimento</h3>
         <button id="graphics1-btn-sentiment">Reddit</button>
         <button id="graphics2-btn-sentiment">Twitter.it</button>
         <button id="graphics3-btn-sentiment">Twitter.com</button>
@@ -209,17 +217,7 @@
       <div id="graphics-container-sentiment" class="chartContainer"></div>
 
     </div>
-    <p>
-      Il grafico in figura mostra l'andamento del <i>sentiment</i> verso l'argomento "ChatGPT" nell'arco dei mesi.
-    </p>
-    <p>
-      Tramite il selettore è possibile esplorare rispettivamente:
-      <ul>
-        <li>L'andamento trimestrale nel dataset proveniente dai commenti su Reddit (relativo al periodo marzo 2023 - maggio 2023)</li>
-        <li>L'andamento del sentimento nel dataset di tweets in lingua inglese (relativo al periodo settembre 2022 - giugno 2022</li>
-        <li>L'andamento del sentimento nel dataset di tweets in lingua italiana (relativo al periodo settembre 2022 - giugno 2023)</li>
-      </ul>
-    </p>
+   
     <p>Dall'osservazione dell'andamento delle curve possiamo notare come il sentimento verso ChatGPT sia complessivamente positivo, con l'eccezione del grafico per il dataset italiano che incorpora numerose etichette con valore neutro.</p>
     <p>Il grafico costruito sui post di Reddit presenta un picco nella fase di aprile 2023, mentre quello per Twitter.com presenta il proprio nel periodo di gennaio/febbraio 2023, seguito da un'assottigliamento della curva procedendo verso la fase maggio/giugno 2023.</p>
     <div>
