--- a/site/index.html
+++ b/site/index.html
@@ -111,9 +111,9 @@
         <div class="w3-content w3-justify">
           <h2 id="sez1">Cos’è ChatGPT</h2>
           <p>
-            ChatGPT è un <strong>chatbot sviluppato dalla società americana OpenAI</strong>, fondata da Elon Musk, Sam Altman Greg Brockman, Ilya Sutskever, Wojciech Zaremba, and John Schulman nel 2015.<br>
-            La <b>prima versione di <i>Generative Pre-trained Transformer</i> (GPT-1) é, risalente al 2018</b>, un modello di Intelligenza Artificiale con <b>117 milioni di parametri</b> addestrato su enormi quantità di materiale proveniente da diverse <b>fonti e produzioni testuali digitali</b>, come articoli, notizie, libri e praticamente <b>tutto il materiale che si trova sul web</b>. Grazie a questo training, GPT-1 ha dimostrato di essere in grado di <b>comprendere il linguaggio naturale</b> e di generare testi di alta qualità, anche se con alcune limitazioni legate alla comprensione del contesto e alla complessità delle produzioni.<br>
-            Con il modello GPT-2, caratterizzato da 1.5 miliardi di parametri, sono stati ottenuti significativi miglioramenti, e nel 2020 è stata rilasciata <b>Chat GPT-3, una versione ancora più avanzata del modello, con 175 miliardi di parametri</b>, in grado di svolgere compiti che richiedono conoscenze specialistiche. La sua sconcertante capacità di comprensione e generazione di testo la rende uno strumento adatto a svariate applicazioni, dalla traduzione in varie lingue alla produzione di articoli, storie, canzoni o poesie fino alla scrittura o alla correzione di codici di programmazione.
+            ChatGPT è un <strong>chatbot sviluppato dalla società americana OpenAI</strong>, fondata da Elon Musk, Sam Altman, Greg Brockman, Ilya Sutskever, Wojciech Zaremba, and John Schulman nel 2015.<br>
+            La <b>prima versione di <i>Generative Pre-trained Transformer</i> (GPT-1), risalente al 2018</b>, è un modello di Intelligenza Artificiale con <b>117 milioni di parametri</b> addestrato su enormi quantità di materiale proveniente da diverse <b>fonti e produzioni testuali digitali</b>, come articoli, notizie, libri e praticamente <b>tutto il materiale che si trova sul web</b>. Grazie a questo training, GPT-1 ha dimostrato di essere in grado di <b>comprendere il linguaggio naturale</b> e di generare testi di alta qualità, anche se con alcune limitazioni legate alla comprensione del contesto e alla complessità delle produzioni.<br>
+            Con il modello GPT-2, caratterizzato da 1.5 miliardi di parametri, sono stati ottenuti significativi miglioramenti e nel 2020 è stata rilasciata <b>Chat GPT-3, una versione ancora più avanzata del modello, con 175 miliardi di parametri</b>, in grado di svolgere compiti che richiedono conoscenze specialistiche. La sua sconcertante capacità di comprensione e generazione di testo la rende uno strumento adatto a svariate applicazioni, dalla traduzione in varie lingue alla produzione di articoli, storie, canzoni o poesie fino alla scrittura o alla correzione di codici di programmazione.
           </p>
           <p>
             “OpenAi era nata come società di ricerca aperta per produrre sistemi che andassero nella direzione di AI da mettere a disposizione pubblicamente, ma dopo qualche anno si sono resi conto che per sviluppare questi sistemi occorrevano grossi investimenti in infrastruttura che non riuscivano ad ottenere come ente no profit, quindi hanno costruito OpenAi come società" <a href="https://www.youtube.com/watch?v=ej5lEP1bmdQ"  target="_blank"> ha spiegato il professor Attardi</a>, docente di informatica all'Università di Pisa e pioniere delle tecnologie web. Ora esistono 2 enti openAi, Foundation e Società commerciale, in cui c’è un’importante partecipazione di Microsoft, che ha contribuito con 1 miliardo di risorse di calcolo e di strumenti che usa openAi per fare operazioni, e che opera a livello commerciale. Non si possono fare oggi operazioni con tecnologie di punta senza risorse di calcolo adeguate”.
@@ -168,12 +168,6 @@
                   <div>Sentiment analysis</div>
                 </div>
               </a>
-              <a href="#sez6" id="toc-element-3-2" class="ElementWrapper-choicer">
-                <div class="pallino"></div>
-                <div class="scritta">
-                  <div>Sentiment Analysis sui dataset in italiano e inglese</div>
-                </div>
-              </a>
             </div>
           </div>
         </div>
@@ -192,15 +186,14 @@
       <p>
         Al fine di determinare come le persone hanno recepito questa nuovo tool, sono stati recuperati post dai social media Reddit e Twitter, in lingua inglese e italiana, ed è stata effettuata la <i>Sentiment Analysis</i> con due strumenti diversi, NLTK e Textblob, due librerie Python che permettono di eseguire operazioni di <i>Natural Language Processing</i> su testi.<br>
         <i>L'analisi del sentimento</i> consiste in un processo di categorizzazione digitale di pezzi di testo attraverso l'uso di algoritmi, in modo da poter definire se una frase ha connotazione positiva, neutra oppure negativa.
-      </p><br>
+      </p>
 
-      <h2 id="sez6">Sentiment analysis sui dataset in italiano e inglese</h2>
       <p>
-      Il grafico in figura mostra l'andamento del <i>sentiment</i> verso l'argomento "ChatGPT" nell'arco dei mesi.
+      I grafici di seguito mostrano l'andamento temporale del <i>sentimento</i> sull'argomento "ChatGPT".
       Per Reddit è stata presa in considerazione solo la lingua inglese, mentre per Twitter sia l'italiano che l'inglese.
       </p>
       <p>
-        Tramite i pulsuanti è possibile esplorare rispettivamente:
+        Tramite i pulsanti è possibile esplorare rispettivamente:
       </p>
         <ul>
           <li>L'andamento trimestrale nel dataset proveniente dai commenti su Reddit (relativo al periodo marzo 2023 - maggio 2023)</li>
