--- a/site/index.html
+++ b/site/index.html
@@ -177,14 +177,14 @@
       <h2 id="sez4">L'arrivo di ChatGPT</h2>
 
       <p>
-        L'introduzione di ChatGPT ha generato attenzione da parte di un pubblico molto ampio: é stato rilasciato il 30 Novembre 2022 e a Gennaio 2023 aveva già più di 100 milioni di utenti, diventando l'applicazione software con <a href="https://www.reuters.com/technology/chatgpt-sets-record-fastest-growing-user-base-analyst-note-2023-02-01/" target="_blank">crescita di valore più veloce nella storia</a>.<br>
+        L'introduzione di ChatGPT ha generato attenzione da parte di un pubblico molto ampio: é stato rilasciato il 30 Novembre 2022 e a Gennaio 2023 aveva già più di 100 milioni di utenti, diventando l'applicazione software con <a href="https://www.reuters.com/technology/chatgpt-sets-record-fastest-growing-user-base-analyst-note-2023-02-01/" target="_blank">crescita di utenti più veloce nella storia</a>.<br>
         Questo tipo di tecnologia può essere definita <i>disruptive</i>, ovvero <i>di rottura</i>, talmente innovativa da generare cambiamenti repentini che portano a modi nuovi e differenti, rispetto al passato, di fare, pensare o interpretare ciò che ci circonda. <br>
       </p>
 
       <h2 id="sez5">Sentiment Analysis</h2>
       <img src="img/dall-e3.png" alt="Computer circondato da robot" class="image-container-right">
       <p>
-        Al fine di determinare come le persone hanno recepito questa nuovo tool, sono stati recuperati post dai social media Reddit e Twitter, in lingua inglese e italiana, ed è stata effettuata la <i>Sentiment Analysis</i> con due strumenti diversi, NLTK e Textblob, due librerie Python che permettono di eseguire operazioni di <i>Natural Language Processing</i> su testi.<br>
+        Per indagare su come le persone hanno recepito questo nuovo strumento, sono stati recuperati post dai social media Reddit e Twitter, in lingua inglese e italiana, ed è stata effettuata la <i>Sentiment Analysis</i> con due metodi diversi, NLTK e Textblob, librerie in linguaggio Python che permettono di eseguire operazioni di <i>Natural Language Processing</i> su testi.<br>
         <i>L'analisi del sentimento</i> consiste in un processo di categorizzazione digitale di pezzi di testo attraverso l'uso di algoritmi, in modo da poter definire se una frase ha connotazione positiva, neutra oppure negativa.
       </p>
 
