--- a/site/index.html
+++ b/site/index.html
@@ -185,7 +185,7 @@
       <img src="img/dall-e3.png" alt="Computer circondato da robot" class="image-container-right">
       <p>
         Per indagare su come le persone hanno recepito questo nuovo strumento, sono stati recuperati post dai social media Reddit e Twitter, in lingua inglese e italiana, ed è stata effettuata la <i>Sentiment Analysis</i> con due metodi diversi, NLTK e Textblob, librerie in linguaggio Python che permettono di eseguire operazioni di <i>Natural Language Processing</i> su testi.<br>
-        <i>L'analisi del sentimento</i> consiste in un processo di categorizzazione digitale di pezzi di testo attraverso l'uso di algoritmi, in modo da poter definire se una frase ha connotazione positiva, neutra oppure negativa.
+        <i>L'analisi del sentimento</i> consiste in un processo di categorizzazione digitale di parti di testo attraverso l'uso di algoritmi, in modo da poter definire se una frase ha connotazione positiva, neutra oppure negativa.
       </p>
 
       <p>
@@ -193,12 +193,12 @@
       Per Reddit è stata presa in considerazione solo la lingua inglese, mentre per Twitter sia l'italiano che l'inglese.
       </p>
       <p>
-        Tramite i pulsanti è possibile esplorare rispettivamente:
+        Tramite i pulsanti è possibile visualizzare rispettivamente:
       </p>
         <ul>
-          <li>L'andamento trimestrale nel dataset proveniente dai commenti su Reddit (relativo al periodo marzo 2023 - maggio 2023)</li>
-          <li>L'andamento del sentimento nel dataset di tweets in lingua inglese (relativo al periodo settembre 2022 - giugno 2022</li>
-          <li>L'andamento del sentimento nel dataset di tweets in lingua italiana (relativo al periodo settembre 2022 - giugno 2023)</li>
+          <li>L'andamento del sentimento dei commenti su Reddit sul periodo maggio 2023 - giugno 2023)</li>
+          <li>L'andamento del sentimento dei tweets in lingua inglese relativo al periodo settembre 2022 - giugno 2022</li>
+          <li>L'andamento del sentimento dei tweets in lingua italiana relativo al periodo settembre 2022 - giugno 2023</li>
         </ul>
 
 
