Add Reddit words chart paragraph

--- a/site/index.html
+++ b/site/index.html
@@ -391,8 +391,16 @@
       <div id="graphics-container-words" class="chartContainer"></div>
       <div id="graphics-container-words2" class="chartContainer"></div>
 
+      <h3 class="green">Parole più frequenti su Reddit</h3>
+      <p>
+        Da questo grafico non ci sono particolari sorprese, nel senso che le parole per le rispettive categorie di sentimento sono abbastanza intuibili, salvo alcune eccezioni. Per esempio possiamo notare che molti commenti sono stati rimossi dagli amministratori e nel grafico vengono rappresentati come <i>deleted</i>; lo strumento di analisi ha classificato questi commenti come neutrali, ma si potrebbero considerare come negativi dato che, per essere stati rimossi, si presume che abbiano violato le regole della comunità.
+      </p>
+      <p>
+        Inoltre, si può notare che la parola <i>islam</i> sia stata classificata come negativa, questo può essere dovuto a un pregiudizio nello strumento di analisi oppure a un uso della parola con accezione negativa da parte degli utenti.
+      </p>
+
       <h3 class="green">Parole più frequenti su Twitter in Inglese</h3>
-      <p>Come si può osservare dalle <i>word cloud</i>, le parole più utilizzate nei post sono <b class="green">ask</b>, <b class="green">question</b>, <b class="green">write</b>, <b class="green">create</b>, <b class="green">content</b>, <b class="green">future</b>, <b class="green">technology</b>, <b class="green">Google</b> termini che rimandano ad un utilizzo di ChatGPT in vari ambiti e domini legati alla produzione di contenuti testuali.</p>
+      <p>Come si può osservare dalle <i>word cloud</i>, le parole più utilizzate nei post sono <b class="green">ask</b>, <b class="green">question</b>, <b class="green">write</b>, <b class="green">create</b>, <b class="green">content</b>, <b class="green">future</b>, <b class="green">technology</b>, <b class="green">Google</b>, termini che rimandano a un utilizzo di ChatGPT in vari ambiti e domini legati alla produzione di contenuti testuali.</p>
       <div class="image-container">
         <figure>
           <img src="img/WordcloudENG.png" alt="WordCloud delle parole inglesi" class="w3-image w3-padding-32" width="600" height="650">
