--- a/site/index.html
+++ b/site/index.html
@@ -409,7 +409,7 @@
       </div>
       <h3>Esplorazioni sui dati in inglese</h3>
       <p>
-        <b class="green">Math</b>: svariati tweet in lingua inglese si riferiscono all'incapacità di ChatGPT di svolgere compiti matematici complessi, altri invece ne esaltano le doti, dunque l'opinione degli utenti su Twitter sembra divisa su questo tema.
+        <b class="green">Math</b>: svariati tweet in lingua inglese si riferiscono all'incapacità di ChatGPT di svolgere compiti matematici complessi, altri invece ne esaltano le doti. L'opinione degli utenti sembra quindi divisa al riguardo.
       </p>
       <p>
         <b class="green">Erotic</b>: alcuni utenti hanno interagito con ChatGPT per creare componimenti erotici di varia tipologia, dal racconto sci-fi alla poesia. È stato individuato in questo ambito un utilizzo ancora più particolare:
@@ -438,7 +438,7 @@
       </p>
 
       <h3 class="green">Parole più frequenti su Twitter in Italiano</h3>
-      <p>Anche per l'italiano le parole più utilizzate nei post sono <b class="green">scritto</b>, <b class="green">strumento</b>, <b class="green">chiesto</b>, <b class="green">futuro</b>,<b class="green">lavoro</b>, <b class="green">fare</b>, <b class="green">tecnologia</b>, <b class="green">Google</b>, ma compaiono anche <b class="green">Bing</b> e <b class="green">Microsoft</b>, partner commerciali di OpenAi. </p>
+      <p>Anche per l'italiano le parole più utilizzate nei post sono <b class="green">scritto</b>, <b class="green">strumento</b>, <b class="green">chiesto</b>, <b class="green">futuro</b>,<b class="green">lavoro</b>, <b class="green">fare</b>, <b class="green">tecnologia</b>, <b class="green">Google</b>, ma compaiono anche <b class="green">Bing</b> e <b class="green">Microsoft</b>, partner commerciali di OpenAI. </p>
       <div class="image-container">
         <figure>
           <img id="hover" src="img/WordcloudITA.png" alt="worcloud delle parole italiane più frequenti" class="w3-image w3-padding-32" width="600" height="650">
