--- a/site/index.html
+++ b/site/index.html
@@ -193,12 +193,12 @@
       Per Reddit è stata presa in considerazione solo la lingua inglese, mentre per Twitter sia l'italiano che l'inglese.
       </p>
       <p>
-        Tramite i pulsanti è possibile visualizzare rispettivamente:
+        Tramite i pulsanti è possibile visualizzare rispettivamente l'andamento del sentimento:
       </p>
         <ul>
-          <li>L'andamento del sentimento dei commenti su Reddit sul periodo maggio 2023 - giugno 2023</li>
-          <li>L'andamento del sentimento dei tweets in lingua inglese relativo al periodo settembre 2022 - giugno 2023</li>
-          <li>L'andamento del sentimento dei tweets in lingua italiana relativo al periodo settembre 2022 - giugno 2023</li>
+          <li>dei commenti su Reddit sul periodo maggio 2023 - giugno 2023;</li>
+          <li>dei tweets in lingua inglese relativo al periodo settembre 2022 - giugno 2023;</li>
+          <li>dei tweets in lingua italiana relativo al periodo settembre 2022 - giugno 2023.</li>
         </ul>
 
 
